# SeeMake

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  SeeConfig.cmake
.devcontainer/: Dockerfile  devcontainer.json
benchmark/: CMakeLists.txt
benchmark/libsee/: CMakeLists.txt  google_bench_see_model.cpp
benchmark/see/: CMakeLists.txt  google_bench_terminal_see.cpp
cmake/: Boost.cmake  BuildInfo.cmake  Coverage.cmake  Cppcheck.cmake  Doxygen.cmake  EnableIPOSupport.cmake  FTXUI.cmake  Format.cmake  Install.cmake  Memcheck.cmake  NoInSourceBuilds.cmake  Precompiling.cmake  Testing.cmake  buildinfo.h.in  libsee-config.cmake.in
src/: CMakeLists.txt
src/libsee/: CMakeLists.txt  see_model.cpp
src/libsee/include/libsee/: see_model.h
src/see/: CMakeLists.txt  main.cpp  terminal_see.cpp
src/see/include/see/: terminal_see.h
test/: CMakeLists.txt
test/libsee/: CMakeLists.txt  google_test_see_model.cpp
test/see/: CMakeLists.txt  boost_test_terminal_see.cpp
